apps/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "selfsigned"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - keycloak.local
      secretName: keycloak-tls-secret
  rules:
    - host: keycloak.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
